--- a/application.properties
+++ b/application.properties
@@ -11,6 +11,8 @@ spring.config.additional-location=classpath:/com/soundscore/
 logging.level.org.hibernate.orm.internal=DEBUG
 logging.level.org.hibernate.metamodel.internal=DEBUG
 
+spring.sql.init.mode=always
+
 # Show the banner + basic startup information
 logging.level.org.hibernate.Version=INFO
 
